finished landing, with transformations, positioning and svg sprite

--- a/Module-6/css/style.css
+++ b/Module-6/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -21,6 +25,27 @@
     display: flex;
     justify-content: space-between;
     width: 490px;
+    text-transform: uppercase;
+    height: 25px;
+}
+
+.menu-item{
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.menu-item a{
+    color: #95e1d3;
+    padding-bottom: 12px;
+}
+
+.menu-item a:hover{
+    color: #f38181;
+}
+
+.menu-item:hover{
+    border-bottom: 3px solid #f38181;
 }
 
 .main{
@@ -29,10 +54,26 @@
 
 .title-before{
     text-align: center;
+    font-family: "Kaushan Script";
+    font-size: 24px;
 }
 
 .title{
     text-align: center;
+    text-transform: uppercase;
+    margin-top: 22px;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.title:after{
+    content: "";
+    display: block;
+    margin: 42px auto 0;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
 }
 
 .services{
@@ -45,7 +86,7 @@
 }
 
 .services-item{
-    flex-basis: 338px;
+    width: 340px;
     display: flex;
 }
 
@@ -53,8 +94,8 @@
     margin-top: 99px;
 }
 
-.services-text{
-    margin-left: 29px;
+.services-item:hover .services-icon{
+    fill: #f38181;
 }
 
 .services-icon{
@@ -63,6 +104,175 @@
     fill: #95e1d3;
 }
 
+.services-text{
+    margin-left: 29px;
+    width: 288px;
+}
+
+.services-title{
+    color: rgba(51, 51, 51);
+    text-transform: uppercase;
+    font-family: "Montserrat";
+    font-size: 14px;
+}
+
 .services-info{
     margin-top: 20px;
+    color: rgba(153, 153, 153);
+    font-family: "Roboto";
+    font-size: 15px;
+}
+
+.title-before__second{
+    margin-top: 92px;
+    text-align: center;
+    text-align: center;
+    font-family: "Kaushan Script";
+    font-size: 24px;
+}
+
+.subtitle{
+    width: 941px;
+    margin: 46px auto 0;
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 15px;
+    color: rgba(153, 153, 153);
+}
+
+.team{
+    margin-top: 90px;
+}
+
+.team-list{
+    width: 1200px;
+    margin: 0 auto;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.team-img{
+    width: 383px;
+    height: 473px;
+    display: block;
+
+}
+
+.team-name{
+    margin-top: 30px;
+    text-align: center;
+    color: rgba(51, 51, 51);
+    text-transform: uppercase;
+    font-family: "Montserrat";
+    font-size: 14px;
+}
+
+.team-position{
+    margin-top: 15px;
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+    color: rgba(153, 153, 153);
+}
+
+.img-onhover{
+    position: relative;
+    transition: all 200ms linear;
+}
+
+.social-list{
+    width: 224px;
+    height: 54px;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(90deg, rgba(252, 227, 138, 0.9) 0%, rgba(243,129,129, 0.9) 100%);
+    padding: 210px 80px;
+}
+
+.img-onhover:hover .social-list{
+    display: flex;
+}
+
+.img-onhover:hover{
+    transition: all 200ms linear;
+    transform: translate(-15px, -15px);
+    box-shadow: 15px 15px 0px 0px rgba(149,225,211,1);
+}
+
+.social-icon{
+    height: 26px;
+    margin-right: 1px;
+    padding: 15px 0;
+    background-color: #fce38a;
+    fill: #f38181;
+    opacity: 0;
+    transition: all 150ms linear;
+}
+
+.img-onhover:hover .social-icon{
+    transition: all 150ms linear;
+    opacity: 1;
+}
+
+.social-icon:hover{
+    background-color: #95e1d3;
+    fill: white;
+}
+
+.footer{
+    width: 1200px;
+    margin: 0 auto;
+    margin-top: 82px;
+    border-top: 1px solid #000;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-text{
+    margin-top: 24px;
+    padding-bottom: 24px;
+    font-family: "Montserrat";
+    font-size: 14px;
+    color: rgba(51, 51, 51);
+}
+
+.footer-link{
+    color: #f38181;
+}
+
+.footer-form{
+    font-size: 0;
+    width: 382px;
+    margin-top: 10px;
+    text-align: right;
+}
+
+input[type=email]{
+    width: 215px;
+    height: 38px;
+    border: 1px solid rgba(153, 153, 153);
+    font-family: "Roboto";
+    font-weight: 300;
+    font-style: italic;
+    color: rgba(153, 153, 153);
+    padding-left: 13px;
+}
+
+input[type=submit]{
+    width: 150px;
+    height: 40px;
+    border: none;
+    text-transform: uppercase;
+    background-color: #95e1d3;
+    color: white;
+    font-family: "Montserrat";
+    font-weight: 700;
 }
