--- a/Module-10/css/style.css
+++ b/Module-10/css/style.css
@@ -16,7 +16,7 @@
   @font-face {
     font-family: 'Montserrat';
     font-weight: 700;
-    src: url('../fonts/montserrat-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+    src: url('../fonts/montserrat-v12-latin-700.woff2') format('woff2'),
          url('../fonts/montserrat-v12-latin-700.woff') format('woff')
   }
   
@@ -42,6 +42,9 @@
 
 .hero{
     padding-bottom: 230px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(243,129,129, 0.9)), to(rgba(252, 227, 138, 0.9))), url("../img/bg-hero@1X.png");
+    background-image: -webkit-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@1X.png");
+    background-image: -o-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@1X.png");
     background-image: linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@1X.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -49,9 +52,31 @@
     color: #fff;
 }
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (            -webkit-min-device-pixel-ratio: 2),
+only screen and (               -o-min-device-pixel-ratio: 2/1),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+
+    .hero{
+     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(243,129,129, 0.9)), to(rgba(252, 227, 138, 0.9))), url("../img/bg-hero@2X.png");
+     background-image: -webkit-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@2X.png");
+     background-image: -o-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@2X.png");
+     background-image: linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%), url("../img/bg-hero@2X.png");
+    }
+}
+
 .header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 1200px;
     margin: 0 auto;
     padding-top: 28px;
@@ -64,8 +89,12 @@
 
 .header__menu{
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 620px;
     text-transform: uppercase;
     height: 25px;
@@ -93,8 +122,12 @@
 
 .header__icons{
     width: 78px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .header__icon{
@@ -132,7 +165,8 @@
     padding: 15px 32px;
     width: 160px;
     border: 2px solid #fff;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-size: 14px;
     font-family: "Montserrat";
     font-weight: 700;
@@ -172,13 +206,20 @@
     width: 1150px;
     margin: 66px auto 0;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .services__item{
     width: 340px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -236,8 +277,12 @@
     width: 1200px;
     margin: 90px auto 0;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .team__img{
@@ -267,6 +312,8 @@
 
 .img-onhover{
     position: relative;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
@@ -274,24 +321,40 @@
     width: 224px;
     height: 54px;
     display: none;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(243,129,129, 0.9)), to(rgba(252, 227, 138, 0.9)));
+    background-image: -webkit-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%);
+    background-image: -o-linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%);
     background-image: linear-gradient(rgba(243,129,129, 0.9) 0%, rgba(252, 227, 138, 0.9) 100%);
     padding: 210px 80px;
 }
 
 .img-onhover:hover .social-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .img-onhover:hover{
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
-    transform: translate(-15px, -15px);
-    box-shadow: 15px 15px 0px 0px rgba(149,225,211,1);
+    -webkit-transform: translate(-15px, -15px);
+        -ms-transform: translate(-15px, -15px);
+            transform: translate(-15px, -15px);
+    -webkit-box-shadow: 15px 15px 0px 0px rgba(149,225,211,1);
+            box-shadow: 15px 15px 0px 0px rgba(149,225,211,1);
 }
 
 .social-icon{
@@ -301,10 +364,14 @@
     background-color: #fce38a;
     fill: #f38181;
     opacity: 0;
+    -webkit-transition: all 150ms linear;
+    -o-transition: all 150ms linear;
     transition: all 150ms linear;
 }
 
 .img-onhover:hover .social-icon{
+    -webkit-transition: all 150ms linear;
+    -o-transition: all 150ms linear;
     transition: all 150ms linear;
     opacity: 1;
 }
@@ -319,8 +386,12 @@
     margin: 0 auto;
     margin-top: 82px;
     border-top: 1px solid #000;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .footer__text{
@@ -341,6 +412,8 @@
     width: 379px;
     margin-top: 10px;
     text-align: right;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
